# docs/swagger.yaml
@@ -59,6 +59,53 @@ definitions:
       username:
         type: string
     type: object
+  reports.CreateReportRequest:
+    properties:
+      end_date:
+        type: string
+      start_date:
+        type: string
+      subject:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  reports.Report:
+    properties:
+      createdAt:
+        type: string
+      endDate:
+        type: string
+      entities:
+        items:
+          type: string
+        type: array
+      findings:
+        items:
+          type: string
+        type: array
+      id:
+        type: string
+      reportText:
+        type: string
+      sentiment:
+        type: integer
+      sourceID:
+        type: integer
+      startDate:
+        type: string
+      subject:
+        type: string
+      title:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  reports.ReportResponse:
+    properties:
+      report:
+        $ref: '#/definitions/reports.Report'
+    type: object
   users.FindByIDResponse:
     properties:
       avatarImgUrl:
@@ -175,6 +222,33 @@ paths:
       summary: VerifySignup
       tags:
       - Auth
+  /api/reports/:
+    post:
+      consumes:
+      - application/json
+      description: Validates subject, start date, end date. Creates a new report.
+      parameters:
+      - description: Authorization Key (e.g Bearer key)
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: CreateReportRequest
+        in: body
+        name: CreateReportRequest
+        required: true
+        schema:
+          $ref: '#/definitions/reports.CreateReportRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/reports.ReportResponse'
+      summary: Create Report
+      tags:
+      - Reports
   /api/users:
     get:
       produces:
